--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
     "version": "1.0.0",
     "main": "dist/app.js",
     "scripts": {
-        "start:build": "tsc && node dist/app.js",
+        "start": "tsc && node dist/app.js",
         "start:dev": "nodemon src/app.ts",
         "build": "tsc"
     },
     "devDependencies": {
         "@types/express": "^4.17.17",
         "nodemon": "^3.0.1",
-        "ts-node": "^10.9.1",
-        "typescript": "^5.1.6"
+        "ts-node": "^10.9.1"
     },
     "author": "",
     "license": "ISC",
     "description": "",
     "dependencies": {
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "typescript": "^5.1.6"
     }
 }
