--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
     "version": "1.0.0",
     "main": "dist/app.js",
     "scripts": {
-        "start": "tsc && node dist/app.js",
+        "start": "tsc -p ./tsconfig.build.json && node dist/app.js",
         "start:dev": "nodemon src/app.ts",
-        "build": "tsc"
+        "build": "tsc -p ./tsconfig.build.json",
+        "test": "jest",
+        "test:watch": "jest --watchAll"
     },
     "devDependencies": {
+        "@babel/core": "^7.22.9",
+        "@babel/preset-env": "^7.22.9",
+        "@babel/preset-typescript": "^7.22.5",
         "@types/express": "^4.17.17",
+        "@types/jest": "^29.5.3",
+        "@types/supertest": "^2.0.12",
+        "babel-jest": "^29.6.2",
+        "jest": "^29.6.2",
         "nodemon": "^3.0.1",
+        "supertest": "^6.3.3",
         "ts-node": "^10.9.1"
     },
     "author": "",
