--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.22.9",
+        "@babel/plugin-proposal-decorators": "^7.22.7",
         "@babel/preset-env": "^7.22.9",
         "@babel/preset-typescript": "^7.22.5",
         "@types/express": "^4.17.17",
@@ -20,6 +21,7 @@
         "jest": "^29.6.2",
         "nodemon": "^3.0.1",
         "supertest": "^6.3.3",
+        "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1"
     },
     "author": "",
@@ -27,6 +29,19 @@
     "description": "",
     "dependencies": {
         "express": "^4.18.2",
+        "express-graphql": "^0.12.0",
+        "reflect-metadata": "^0.1.13",
+        "type-graphql": "^1.1.1",
         "typescript": "^5.1.6"
+    },
+    "jest": {
+        "preset": "ts-jest",
+        "testEnvironment": "node",
+        "transform": {
+            "^.+\\.tsx?$": "ts-jest"
+        },
+        "setupFilesAfterEnv": [
+            "./src/tests/test-setup.ts"
+        ]
     }
 }
