--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
     "version": "1.0.0",
     "main": "dist/app.js",
     "scripts": {
-        "start": "tsc -p ./tsconfig.build.json && node dist/app.js",
-        "start:dev": "nodemon src/app.ts",
-        "build": "tsc -p ./tsconfig.build.json",
+        "start": "nest start",
+        "start:dev": "nest start --watch",
         "test": "jest",
         "test:watch": "jest --watchAll"
     },
@@ -14,6 +13,7 @@
         "@babel/plugin-proposal-decorators": "^7.22.7",
         "@babel/preset-env": "^7.22.9",
         "@babel/preset-typescript": "^7.22.5",
+        "@nestjs/cli": "^10.1.12",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.3",
         "@types/supertest": "^2.0.12",
@@ -28,10 +28,15 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@apollo/server": "^4.9.1",
+        "@nestjs/apollo": "^12.0.7",
+        "@nestjs/core": "^10.1.3",
+        "@nestjs/graphql": "^12.0.8",
+        "@nestjs/platform-express": "^10.1.3",
+        "@nestjs/testing": "^10.1.3",
         "express": "^4.18.2",
-        "express-graphql": "^0.12.0",
+        "graphql": "^16.8.0",
         "reflect-metadata": "^0.1.13",
-        "type-graphql": "^1.1.1",
         "typescript": "^5.1.6"
     },
     "jest": {
